kubernetes/base/infrastructure-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - name: kafka
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: kafka-k8s
      protocol: TCP
      port: 9094
      targetPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  ports:
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
spec:
  ports:
    - name: schema-registry
      protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: keycloak
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: minio
      protocol: TCP
      port: 9000
      targetPort: 9000
